--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -9,8 +9,12 @@ import BigLogo from "@/components/assets/BigLogo.astro";
       <span
         class="inline-flex items-center justify-center gap-2 rounded-full px-3 h-7.5 text-xs text-base-900 bg-white ring-inset"
       >
-        <p>1 Spots available</p>
+        <p>3 Spots available</p>
         <div class="size-2 rounded-full bg-black border-2 border-black"></div>
+<div class="size-2 rounded-full bg-black border-2 border-black"></div>
+<div class="size-2 rounded-full bg-black border-2 border-black"></div>
+<div class="size-2 rounded-full bg-black border-2 border-black"></div>
+<div class="size-2 rounded-full bg-black border-2 border-black"></div>
         <div class="size-2 rounded-full border-black border-2"></div>
       </span>
       <h1 class="text-4xl mt-12 tracking-tight text-base-900 text-balance font-medium">
@@ -25,7 +29,7 @@ import BigLogo from "@/components/assets/BigLogo.astro";
         limitless design requests.
       </p>
       <p>
-        Say goodbye to phone calls and extensive contracts; reach out to minimal
+        Say goodbye to phone calls and extensive contracts; reach out to Grinmer
         directly at any time.
       </p>
       
