--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -16,6 +16,8 @@ import BigLogo from "@/components/assets/BigLogo.astro";
 <div class="size-2 rounded-full bg-black border-2 border-black"></div>
 <div class="size-2 rounded-full bg-black border-2 border-black"></div>
         <div class="size-2 rounded-full border-black border-2"></div>
+ <div class="size-2 rounded-full border-black border-2"></div>
+ <div class="size-2 rounded-full border-black border-2"></div>
       </span>
       <h1 class="text-4xl mt-12 tracking-tight text-base-900 text-balance font-medium">
         Design & development subscriptions for startups.
@@ -25,7 +27,7 @@ import BigLogo from "@/components/assets/BigLogo.astro";
       class="grid grid-cols-1 text-base text-base-600 lg:grid-cols-2 max-w-xl gap-2 group h-full mt-12"
     >
       <p>
-        Minimal streamlines the design process with a fixed monthly rate and
+        Grinmer streamlines the design process with a fixed monthly rate and
         limitless design requests.
       </p>
       <p>
