--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -10,25 +10,11 @@ const footerLinks = [
     ],
   },
   {
-    title: "Resources",
-    links: [
-      {
-        label: "Lexington Themes.",
-        href: "https://www.lexingtonthemes.com",
-      },
-      {
-        label: "Oxbow UI",
-        href: "https://www.oxbowui.com",
-      },
-    ],
-  },
-
-  {
     title: "Socials",
     links: [
       {
-        label: "@Mike_Andreuzza",
-        href: "https://twitter.com/Mike_Andreuzza",
+        label: "Twitter",
+        href: "https://twitter.com/timcredits",
       },
     ],
   },
@@ -60,12 +46,8 @@ const footerLinks = [
     </div>
     <div class="mt-12">
       <div class="text-sm text-base-900">
-        © 2025 MicroStudio. All rights reserved.
+        © 2025 Grinmer. All rights reserved.
       </div>
-      <p class="text-xs text-base-600 mt-1 text-balance">
-        MicroStudio is not affiliated with Stripe, Breeew, Astro, or Tailwind
-        Labs, nor is it endorsed or sponsored by them.
-      </p>
     </div>
   </div>
 </footer>
