--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -11,16 +11,10 @@ import Logo from "@/components/assets/Logo.astro";
     </a>
     <div class="flex items-center gap-2 text-xs font-medium">
       <a
-        href="https://lexingtonthemes.com/"
+        href="https://cal.com/grinmer/30min"
         class="text-base-500 hover: text-base-900"
       >
-        More Astro themes</a
-      >
-      <a
-        href="https://github.com/michael-andreuzza/minimalstudio"
-        class="py-2 w-auto px-4 h-8 rounded-full bg-base-100 font-medium hover:bg-transparent text-base-900 duration-200 focus:ring-offset-2 hover: text-base-900 inline-flex items-center justify-center ring-2 ring-transparent focus:ring-black ring-transparent"
-      >
-        GitHub</a
+        Book Call</a
       >
     </div>
   </div>
