--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -4,8 +4,8 @@ import { AstroSeo } from "@astrolib/seo";
 ---
 
 <AstroSeo
-  title="Your Page Title"
-  description="A detailed description of your page content."
+  title="Grinmer"
+  description="A design studio crafting clarity."
   canonical="https://yoursite.com/current-page"
   openGraph={{
     url: "https://yoursite.com/current-page",
@@ -20,7 +20,7 @@ import { AstroSeo } from "@astrolib/seo";
         type: "image/jpeg",
       },
     ],
-    site_name: "Your Site Name",
+    site_name: "Grinmer",
     type: "website",
     locale: "en_US",
   }}
@@ -35,10 +35,10 @@ import { AstroSeo } from "@astrolib/seo";
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <!-- Basic Meta Tags -->
-<title>Your Website Title</title>
+<title>Grinmer</title>
 <meta
   name="description"
-  content="A brief description of your website content."
+  content="A design studio crafting Clarity."
 />
 <meta name="keywords" content="keyword1, keyword2, keyword3" />
 <meta name="author" content="Your Name or Company Name" />
