--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,8 +9,8 @@ import { AstroSeo } from "@astrolib/seo";
   canonical="https://yoursite.com/current-page"
   openGraph={{
     url: "https://yoursite.com/current-page",
-    title: "Your Page Title",
-    description: "A detailed description of your page content.",
+    title: "Grinmer",
+    description: "A design studio crafting clarity.",
     images: [
       {
         url: "https://yoursite.com/og-image.jpg",
