--- a/src/components/landing/Faq.astro
+++ b/src/components/landing/Faq.astro
@@ -3,12 +3,12 @@ const faqs = [
   {
     question: "Who runs the studio?",
     answer:
-      "My name is Michael Andreuzza, UI Designer and Front-end Developer. I also build products for myself. Learn more at michaelandreuzza.com.",
+      "My name is Timothy Credits, UI Designer and Front-end Developer. I also build products for myself. Learn more at x.com/timcredits .",
   },
   {
     question: "How do we communicate and manage the project?",
     answer:
-      "Minimal uses Breeew for project management, ensuring seamless communication and collaboration.",
+      "Grinmer uses Notion for project management, ensuring seamless communication and collaboration.",
   },
   {
     question: "How quickly will I get some work done?",
@@ -16,14 +16,14 @@ const faqs = [
       "Expect the initial concept within 2–3 days. For larger projects, timelines may extend up to 4 weeks. Revisions are unlimited until you're satisfied.",
   },
   {
-    question: "Why do you only have two spots?",
+    question: "Why do you only have eight spots?",
     answer:
-      "To ensure high-quality results and focused attention, minimal only takes on two projects at a time. This allows for timely and dedicated work.",
+      "To ensure high-quality results and focused attention, Grinmer only takes on eight projects at a time. This allows for timely and dedicated work.",
   },
   {
     question: "What if I don’t like the design?",
     answer:
-      "Your satisfaction is the priority. That’s why minimal offers unlimited design requests and revisions.",
+      "Your satisfaction is the priority. That’s why Grinmer offers unlimited design requests and revisions.",
   },
   {
     question: "Are there any refunds?",
@@ -44,11 +44,11 @@ const faqs = [
       Can't find your answer? Send an
       <a
         class="text-blue-500 hover:text-base-900 duration-200"
-        href="mailto:michael@andreuzza.com"
+        href="mailto:hi@grinmer.com"
       >
         email
       </a>
-      and minimal will get back to you.
+      and Grinmer will get back to you.
     </p>
 
     <div
