--- a/src/components/assets/Logo.astro
+++ b/src/components/assets/Logo.astro
@@ -2,13 +2,4 @@
 const { class: className, ...rest } = Astro.props;
 ---
 
-<svg
-  class={className}
-  {...rest}
-  viewBox="0 0 100 100"
-  fill="none"
-  xmlns="http://www.w3.org/2000/svg"
->
-  <circle cx="50" cy="50" r="40" stroke="black" stroke-width="10" fill="none"
-  ></circle>
-</svg>
+<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500"><defs><style>.cls-1{fill:#fff;}</style></defs><rect x="19.47" y="22.44" width="456.25" height="456.25" rx="75.01"/><path class="cls-1" d="M180.53,286.07l23,6.86a8.5,8.5,0,0,1-6.09,4l-31.76,4.56a8.67,8.67,0,0,1-9.55-11l7.58-25.66a8.68,8.68,0,0,1,14-4.07l24.17,21.1a8.47,8.47,0,0,1,3,6.88l-23.08-6.88a5.33,5.33,0,1,0-1.29,4.29Z"/><path class="cls-1" d="M303.76,240.83a84,84,0,1,0-30.39,23A51.51,51.51,0,1,1,204,325.92c-.34-1.17-.65-2.36-.91-3.55h0a17.81,17.81,0,0,0-34.31,8.83c.25,1.1.52,2.19.82,3.27,0,0,0,0,0,0a86.86,86.86,0,1,0,134.15-93.65Zm-34.24-14.6A49.93,49.93,0,1,1,289,186.63,49.68,49.68,0,0,1,269.52,226.23Z"/></svg>
