--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -145,52 +145,17 @@ const pricingTiers = [
       }
 
       <section
-        class="h-full p-8 flex flex-col col-span-full md:col-span-1 xl:col-span-2 justify-between order-last md:order-none bg-white rounded-3xl"
-      >
-        <p class="text-lg text-base-900 lg:text-xl">Good to know</p>
-        <div class="mt-4">
-          <p class="text-xs text-base-500 font-normal">
-            Microstudio focuses exclusively on design and front-end development.
-            The following services are not included:
-            <span class="text-base-900 italic font-medium">design systems</span
-            >,
-            <span class="text-base-900 italic font-medium">3D</span>,
-            <span class="text-base-900 italic font-medium">prototypes</span>,
-            <span class="text-base-900 italic font-medium">mobile apps</span>,
-            <span class="text-base-900 italic font-medium">illustrations</span>,
-            <span class="text-base-900 italic font-medium">CMS setups</span>,
-            <span class="text-base-900 italic font-medium">back-end work</span>,
-            <span class="text-base-900 italic font-medium">hosting</span>,
-            <span class="text-base-900 italic font-medium">marketing</span>,
-            <span class="text-base-900 italic font-medium">copywriting</span>,
-            <span class="text-base-900 italic font-medium">animations</span>,
-            and
-            <span class="text-base-900 italic font-medium"
-              >overly complex builds</span
-            >.
-          </p>
-
-          <div class="border-t border-base-200 flex flex-col pt-4 mt-4">
-            <p class="text-xs text-base-400">
-              Minimal supports English, Spanish, Italian, and Swedish. Pick
-              what’s comfortable!
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <section
         class="h-full rounded-3xl justify-between col-span-full lg:col-span-1 xl:col-span-2 bg-white p-8"
       >
         <div class="flex flex-col justify-between h-full">
           <h3 class="text-lg text-base-900 lg:text-xl">Book an intro call</h3>
           <p class="text-xs text-base-500 mt-4 text-balance">
             Not sure if it’s the right fit? Let’s talk. Book a quick intro call
-            and get a feel for how Minimal works.
+            and get a feel for how Grinmer works.
           </p>
 
           <a
-            href="#_"
+            href="https://cal.com/grinmer/30min"
             class="text-sm text-base-900 hover:text-blue-500 mt-4 font-medium"
           >
             Book a call
